--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "binary-search-tree",
-  "version": "0.2.6",
+  "name": "@zorn-v/binary-search-tree",
+  "version": "0.2.7",
   "author": {
     "name": "Louis Chatriot",
     "email": "louis.chatriot@gmail.com"
@@ -18,11 +18,11 @@
     "url": "git@github.com:louischatriot/node-binary-search-tree.git"
   },
   "dependencies": {
-    "underscore": "~1.4.4"
+    "underscore": "~1.13.1"
   },
   "devDependencies": {
     "chai": "1.0.x",
-    "mocha": "1.4.x"
+    "mocha": "~9.0.2"
   },
   "scripts": {
     "test": "make test"
